# first_sqlalchemy

./: docker-compose.yaml  env.template  pyproject.toml
app/: data.py  main.py
app/core/config/: config.py
app/core/crud/: __init__.py  create_tables.py  crud.py  exec_stmt.py  table_manager.py
app/core/database/: __init__.py  database.py
app/core/metadata/: __init__.py  metadata.py
app/models/: __init__.py  resumes.py  type_models.py  vacancies.py  vacansies.py  workers.py
app/queries/: __init__.py  complex_data_manipulations.py  queries.py
app/schemas/: __init__.py  resume.py  resumes.py  vacancies.py  worker.py  workers.py
app/workers/: __init__.py  models.py
