[project]
name = "first-sqlalchemy"
version = "0.1.0"
description = ""
authors = [
    {name = "pantyukhinda",email = "dmitriy.pantyukhin@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic (>=1.18.4,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "psycopg-binary (>=3.3.3,<4.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "fastapi (>=0.135.1,<0.136.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "uvicorn (>=0.42.0,<0.43.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
