[tool.poetry]
name = "first-sqlalchemy"
version = "0.1.0"
description = ""
authors = ["pantyukhinda <dmitriy.pantyukhin@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.18.4"
asyncpg = "^0.31.0"
psycopg-binary = "^3.3.3"
sqlalchemy = "^2.0.48"
fastapi = "^0.135.1"
pydantic = "^2.12.5"
pydantic-settings = "^2.13.1"
uvicorn = "^0.42.0"
ipykernel = "^7.2.0"
psycopg = "^3.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
